use java 9. add reduceMinMaxSum